--- a/MMM-Clash-Royale.css
+++ b/MMM-Clash-Royale.css
@@ -25,8 +25,23 @@
 }
 
 
-/* Display cards horizontally if position is bottom_bar */
-div.region.bottom.bar .MMM-Clash-Royale ul.cards  {
+/***********************************************/
+/* Display cards horizontally if position is
+/*  - top_bar, 
+/*  - top_center 
+/*  - upper_third
+/*  - middle_center 
+/*  - lower_third 
+/*  - bottom_bar
+/*  - bottom_center 
+/***********************************************/
+div.region.top.bar .MMM-Clash-Royale ul.cards,
+div.region.top.bar div.region.top.center .MMM-Clash-Royale ul.cards,
+div.region.upper.third .MMM-Clash-Royale ul.cards,
+div.region.middle.center .MMM-Clash-Royale ul.cards,
+div.region.lower.third .MMM-Clash-Royale ul.cards,
+div.region.bottom.bar .MMM-Clash-Royale ul.cards,
+div.region.bottom.bar div.region.bottom.center .MMM-Clash-Royale ul.cards {
     display: table;
     width: 100%;
     
@@ -39,35 +54,58 @@ div.region.bottom.bar .MMM-Clash-Royale ul.cards  {
     display: flex;
     flex-direction: row;
 }
-div.region.bottom.bar .MMM-Clash-Royale ul.cards li {
+div.region.top.bar .MMM-Clash-Royale ul.cards li,
+div.region.top.bar div.region.top.center .MMM-Clash-Royale ul.cards li,
+div.region.upper.third .MMM-Clash-Royale ul.cards li,
+div.region.middle.center .MMM-Clash-Royale ul.cards li,
+div.region.lower.third .MMM-Clash-Royale ul.cards li,
+div.region.bottom.bar .MMM-Clash-Royale ul.cards li,
+div.region.bottom.bar div.region.bottom.center .MMM-Clash-Royale ul.cards li {
     flex-grow: 1;
     text-align: center;
     vertical-align: bottom;
 }
-div.region.bottom.bar .MMM-Clash-Royale ul.cards li img {
+div.region.top.bar .MMM-Clash-Royale ul.cards li img,
+div.region.top.bar div.region.top.center .MMM-Clash-Royale ul.cards li img,
+div.region.upper.third .MMM-Clash-Royale ul.cards li img,
+div.region.middle.center .MMM-Clash-Royale ul.cards li img,
+div.region.lower.third .MMM-Clash-Royale ul.cards li img,
+div.region.bottom.bar .MMM-Clash-Royale ul.cards li img,
+div.region.bottom.bar div.region.bottom.center .MMM-Clash-Royale ul.cards li img {
     width: 90%;
 }
 
 
-/* right or left positions */
 
+/***********************************************/
+/* Display cards in 2x4 grid if position is
+/*  - top_left, 
+/*  - top_right, 
+/*  - bottom_left 
+/*  - bottom_right
+/***********************************************/
 div.region.top.left .MMM-Clash-Royale ul.cards,
-div.region.top.right .MMM-Clash-Royale ul.cards {
+div.region.top.right .MMM-Clash-Royale ul.cards,
+div.region.bottom.left .MMM-Clash-Royale ul.cards,
+div.region.bottom.right .MMM-Clash-Royale ul.cards {
     max-width: 200px;
     margin: 0;
     padding: 0;
 }
-
 div.region.top.left .MMM-Clash-Royale ul.cards li,
-div.region.top.right .MMM-Clash-Royale ul.cards li{
+div.region.top.right .MMM-Clash-Royale ul.cards li,
+div.region.bottom.left .MMM-Clash-Royale ul.cards li,
+div.region.bottom.right .MMM-Clash-Royale ul.cards li {
     display: inline-block;
     width: 50%;
     margin: 0;
     padding: 0;
     vertical-align: top;
-    text-align: center;
+    text-align: center;        
 }
 div.region.top.left .MMM-Clash-Royale ul.cards li img,
-div.region.top.right .MMM-Clash-Royale ul.cards li img {
+div.region.top.right .MMM-Clash-Royale ul.cards li img,
+div.region.bottom.left .MMM-Clash-Royale ul.cards li img,
+div.region.bottom.right .MMM-Clash-Royale ul.cards li img {
     width: 90%;
 }
